--- a/gui/src/Dialogs/WordlistDialog.ui
+++ b/gui/src/Dialogs/WordlistDialog.ui
@@ -70,7 +70,7 @@
          <number>5</number>
         </property>
         <item>
-         <widget class="QRadioButton" name="radioButton_defaultWordlist">
+         <widget class="QRadioButton" name="radioButtonDefaultWordlist">
           <property name="font">
            <font>
             <weight>75</weight>
@@ -110,7 +110,7 @@
            </widget>
           </item>
           <item>
-           <widget class="QComboBox" name="comboBox_auto">
+           <widget class="QComboBox" name="comboBoxAutoWordlist">
             <property name="minimumSize">
              <size>
               <width>180</width>
@@ -150,7 +150,7 @@
          <number>5</number>
         </property>
         <item>
-         <widget class="QRadioButton" name="radioButton_specialWordlist">
+         <widget class="QRadioButton" name="radioButtonSpecialWordlist">
           <property name="font">
            <font>
             <weight>75</weight>
@@ -187,7 +187,7 @@
            </widget>
           </item>
           <item>
-           <widget class="QComboBox" name="comboBox_special">
+           <widget class="QComboBox" name="comboBoxSpecialWordlist">
             <property name="minimumSize">
              <size>
               <width>180</width>
@@ -207,7 +207,7 @@
        </layout>
       </item>
       <item>
-       <widget class="QCheckBox" name="checkBox_newSpecialWordlist">
+       <widget class="QCheckBox" name="checkBoxNewSpecialWordlist">
         <property name="font">
          <font>
           <weight>75</weight>
@@ -233,33 +233,33 @@
      <property name="frameShadow">
       <enum>QFrame::Sunken</enum>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout_3">
+     <layout class="QVBoxLayout" name="verticalLayout_2">
       <property name="spacing">
-       <number>5</number>
+       <number>2</number>
       </property>
       <property name="leftMargin">
-       <number>0</number>
+       <number>4</number>
       </property>
       <property name="topMargin">
-       <number>0</number>
+       <number>2</number>
       </property>
       <property name="rightMargin">
-       <number>0</number>
+       <number>4</number>
       </property>
       <property name="bottomMargin">
-       <number>1</number>
+       <number>2</number>
       </property>
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_3">
         <item>
-         <widget class="QLineEdit" name="lineEdit_specialName">
+         <widget class="QLineEdit" name="lineEditName">
           <property name="styleSheet">
            <string notr="true"/>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="pushButton_create">
+         <widget class="QPushButton" name="buttonCreate">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
             <horstretch>0</horstretch>
@@ -289,152 +289,14 @@
        </layout>
       </item>
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_6">
-        <item>
-         <widget class="QListWidget" name="listWidget_specialWordlist">
-          <property name="focusPolicy">
-           <enum>Qt::NoFocus</enum>
-          </property>
-          <property name="styleSheet">
-           <string notr="true"/>
-          </property>
-          <property name="editTriggers">
-           <set>QAbstractItemView::DoubleClicked</set>
-          </property>
-          <property name="selectionMode">
-           <enum>QAbstractItemView::ExtendedSelection</enum>
-          </property>
-          <property name="verticalScrollMode">
-           <enum>QAbstractItemView::ScrollPerPixel</enum>
-          </property>
-          <property name="horizontalScrollMode">
-           <enum>QAbstractItemView::ScrollPerPixel</enum>
-          </property>
-          <property name="selectionRectVisible">
-           <bool>true</bool>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <layout class="QVBoxLayout" name="verticalLayout_2">
-          <property name="spacing">
-           <number>2</number>
-          </property>
-          <item>
-           <widget class="QPushButton" name="pushButton_clear">
-            <property name="minimumSize">
-             <size>
-              <width>75</width>
-              <height>23</height>
-             </size>
-            </property>
-            <property name="maximumSize">
-             <size>
-              <width>75</width>
-              <height>23</height>
-             </size>
-            </property>
-            <property name="styleSheet">
-             <string notr="true"/>
-            </property>
-            <property name="text">
-             <string>Clear</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QPushButton" name="pushButton_remove">
-            <property name="minimumSize">
-             <size>
-              <width>75</width>
-              <height>23</height>
-             </size>
-            </property>
-            <property name="maximumSize">
-             <size>
-              <width>75</width>
-              <height>23</height>
-             </size>
-            </property>
-            <property name="styleSheet">
-             <string notr="true"/>
-            </property>
-            <property name="text">
-             <string>Remove</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QPushButton" name="pushButton_load">
-            <property name="minimumSize">
-             <size>
-              <width>75</width>
-              <height>23</height>
-             </size>
-            </property>
-            <property name="maximumSize">
-             <size>
-              <width>75</width>
-              <height>23</height>
-             </size>
-            </property>
-            <property name="styleSheet">
-             <string notr="true"/>
-            </property>
-            <property name="text">
-             <string>Load</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <spacer name="verticalSpacer">
-            <property name="orientation">
-             <enum>Qt::Vertical</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>20</width>
-              <height>40</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-         </layout>
-        </item>
-       </layout>
-      </item>
-      <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_5">
-        <item>
-         <widget class="QLineEdit" name="lineEdit_add">
-          <property name="styleSheet">
-           <string notr="true"/>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QPushButton" name="pushButton_add">
-          <property name="minimumSize">
-           <size>
-            <width>75</width>
-            <height>23</height>
-           </size>
-          </property>
-          <property name="maximumSize">
-           <size>
-            <width>75</width>
-            <height>23</height>
-           </size>
-          </property>
-          <property name="styleSheet">
-           <string notr="true"/>
-          </property>
-          <property name="text">
-           <string>Add</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
+       <widget class="InputWidget" name="specialWordlist" native="true">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>100</height>
+         </size>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
@@ -444,7 +306,7 @@
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_4">
        <item>
-        <widget class="QPushButton" name="pushButton_cancel">
+        <widget class="QPushButton" name="buttonCancel">
          <property name="minimumSize">
           <size>
            <width>0</width>
@@ -466,7 +328,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="pushButton_ok">
+        <widget class="QPushButton" name="buttonOk">
          <property name="minimumSize">
           <size>
            <width>0</width>
@@ -493,6 +355,14 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>InputWidget</class>
+   <extends>QWidget</extends>
+   <header>src/widgets/InputWidget.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
  <buttongroups>
